--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     background-color: rgb(247, 241, 234);
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
 
 #curiosidade{
@@ -35,4 +41,32 @@ button{
 
 button:hover{
     color: gray;
+}
+
+nav{
+    padding: 1rem;
+    width: 100%;
+}
+
+nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+    background-color: bisque;
+}
+
+nav ul li{
+    display: inline;
+}
+
+nav ul li a{
+    text-decoration: none;
+    display: block;
+    padding: 0.5rem 1rem;
+}
+
+nav ul li a:hover{
+    background-color: cadetblue;
 }
