--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
-body{
+.main{
     background-color: rgb(247, 241, 234);
     display: flex;
     flex-direction: column;
@@ -45,7 +45,8 @@ button:hover{
 
 nav{
     padding: 1rem;
-    width: 100%;
+    background-color: bisque;
+  
 }
 
 nav ul{
@@ -54,7 +55,6 @@ nav ul{
     padding: 0;
     display: flex;
     justify-content: space-around;
-    background-color: bisque;
 }
 
 nav ul li{
