--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .main{
-    background-color: rgb(247, 241, 234);
+    background-color: #FEF7E7;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,7 +45,7 @@ button:hover{
 
 nav{
     padding: 1rem;
-    background-color: bisque;
+    background-color: #F5DECD;
   
 }
 
